further DBS comments

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -105,8 +105,8 @@ Data will be submitted to Dryad upon publication. Code is available in the Githu
 
     % DBS: I might be being dense, but I don't see where Ellison 2019 says anything about "horizontal networks".
     % MDB: "These non-trophic interactions usually are neglected in ecological networks unless they are lumped within compartments representing other primary producers or basal resources" - should I remove?
-    \paragraph{} 
-    \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to directly observe empirically and must instead be deduced through other means. A common approach in population ecology is to directly quantify the effects of interactions on a species of interest by evaluating performance in the absence and presence of potential interaction partners at fixed or varying densities \parencite{Connell1961, Grace1990}. `Performance' here refers to any variable that affects the dynamics of the system, for example quantity of resources gathered, biomass accumulation, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through their connection to population dynamics models, and thus helps draw direct conclusions about the effects of interactions on emergent diversity patterns \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases as $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
+    \paragraph{} % Cite Vellend ecological monograph
+    \textbf{Horizontal networks, however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) \parencite{Vellend2016} have been more neglected by network ecology \parencite{Ellison2019}}. In such systems, interactions between species are not always easy to directly observe empirically and must instead be deduced through other means. A common approach in population ecology is to directly quantify the effects of interactions on a species of interest by evaluating performance in the absence and presence of potential interaction partners at fixed or varying densities \parencite{Connell1961, Grace1990}. `Performance' here refers to any variable that affects the dynamics of the system, for example quantity of resources gathered, biomass accumulation, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through their connection to population dynamics models, and thus helps draw direct conclusions about the effects of interactions on emergent diversity patterns \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases as $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
     \paragraph{}
     \textbf{Various methods have been developed to circumvent these issues. A common strategy is to reduce the number of parameters to be estimated by assuming most interactions are weak enough to be negligible, and thus priority is given to inferrence of only the strongest interactions \parencite{Weiss-Lehman2022}. Other approaches include averaging interactions across species by aggregating species together in groups, for example based on their origin and life form \parencite{Martyn2021}, by their taxonomy and traits \parencite{Uriarte2004}, or lumping all heterospecific species together \parencite{Chu2015}. Here we present a alternative approach designed to make the most of available data without requiring such strong a priori hypotheses. Specifically, we develop a joint model that allows us to estimate both identifiable and unidentifiable pairwise interactions from measures of performance in the absence and presence of different interaction partners.}
@@ -124,10 +124,8 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Data requirements}
     \label{meth:data}
 
-    % DBS: Why do we say "reciprocal" below? MDB: because we're looking at ij and ji
     \paragraph{}
-    The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect reciprocal species performance (lifetime reproductive success). Though we refer to system elements as species throughout this paper, this framework can be applied to data from any interacting group of elements (e.g.\ cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g.\ biomass), fecundity (e.g.\ number of eggs laid) or chemical production (e.g.\ oxygen). Second, these observations must also record the identities and densities of elements which potentially interact with each focal element. Lastly, observations should be replicated for each focal element with the aim of capturing variation in the identities and densities of interaction partners. Though not strictly necessary, it is also beneficial to have observations of focal elements with no interaction partners to better estimate intrinsic performance. 
-    %\textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method. [[DBS: I have a suspicion that we would need to change things if the observations are not per capita...]]} MDB: Not sure what you mean here.
+    The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect each other's performance (lifetime reproductive success). Though we refer to system elements as species throughout this paper, this framework can be applied to data from any interacting group of elements (e.g.\ cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g.\ biomass), fecundity (e.g.\ number of eggs laid) or chemical production (e.g.\ oxygen). Second, these observations must also record the identities and densities of elements which potentially interact with each focal element. Lastly, observations should be replicated for each focal element with the aim of capturing variation in the identities and densities of interaction partners. Though not strictly necessary, it is also beneficial to have observations of focal elements with no interaction partners to better estimate intrinsic performance. 
 
     \paragraph{}
     We define $s$ as the number of focal species $i$, $i \in \{ 1, .., s \}$, and $t$ as the number of interacting species $j$ across all $s$ focals, $j \in \{1, ..., t \}$. Typically, not all species in the system will be represented in the set of focals, such that $s \le t$. Measurements of the performance of individual units from each focal element (e.g.\ seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$ and indexed by $k$, with $k \in \{1, ..., n \}$. The densities of interaction partners are stored in a matrix $X$, of size $n \times t$. When an element $j$ was absent for a given observation $p_k$, then $X_{k,j} = 0$. Finally, the species identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding species: $d_k \in \{1, ..., s \}$.
@@ -229,7 +227,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
 
         \paragraph{}        
         We implement the NDDM (Eq.~\ref{nddm}), the RIM (Eq.~\ref{rim}), and the joint model as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between identifiable and unidentifiable interactions. We provide a working example of the STAN code as well as R scripts and functions to run and fit the model on a simulated dataset in our Github repository \url{https://github.com/malbion/JointModelFramework}.
-        From the model file, only the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
+        From the model file, only \textit{the family function}, the link function for $p_k$ and its parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g.\ biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production, but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
         Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots. \textbf{This being said, we also completed a model validation using multiple chains (S. Methods \ref{SI:multichains}). Outcomes from this validation did not result in different conclusions.}
@@ -260,10 +258,10 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Case study results}
 
     \paragraph{}
-    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we sampled from each resulting interaction strength distribution to create 1000 samples of the scaled community interaction matrix.
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textit{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 54.0\% of focal $\times$ neighbour interactions were competitive, making competition the dominant interaction type. The median of 46.0\% of focal $\times$ neighbour interactions, however, were facilitative, as were the medians of 44.1\% of all focal $\times$ focal interactions. As a result, the median of 48.5\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. Median intraspecific interaction strength was competitive for 14 focal species (63.6\%), and facilitative for the remaining $8$ (36.4\%). For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with 0, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{This stands in contrast to interspecific interactions, for which only 19.4\% did not overlap with 0 when considering all neighbours. It is reasonable to assume that many of those interactions were poorly informed especially those with rarer neighbours (see Methods \ref{meth:sparse}). Indeed the proportion of interspecific interactions which do not overlap with 0 increased to 32\% when considering focal species only since these are the most common species.}
+    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%). For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
 
     \subsection{Examples of ecological applications}
 
@@ -274,10 +272,11 @@ We developed a joint modelling framework to estimate pairwise interactions which
     One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher densities than species which strongly compete with themselves. In our case study, we explore this hypothesis by plotting the effect of a species on itself against its density as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high densities through an under-regulation of their population density and are thus likely to be reaching these densities through other means such as access to a larger niche space. 
 
     \subsubsection*{Q2. Which species are keystones in this system?}
-    Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights two native species in green which may be potential keystone species due to having strongly competitive effects on the rest of the community overall, despite  low densities: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). 
+    Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights a native species in green, \textit{Gilberta tenuifolia} (GITE), which may be a potential keystone species due to having strongly competitive effects on the rest of the community overall, despite low density. 
 
     \subsubsection*{Q3. Do all exotic species compete with native species?}
-    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
+    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. %\textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, its overall competitive effect being largely driven by weak facilitation. 
+    \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
 
 \section{Discussion}
@@ -363,10 +362,10 @@ The authors declare no competing interests.
 
     \addtocounter{figure}{-1}
     \begin{figure} [t!]
-        \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
+        \caption{For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of values as calculated from 1000 sampled networks. Note that only focal $x$ focal interactions are included. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species referred to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
         In (A), the x-axis shows the strength of scaled intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' total log abundance (y-axis). Values above $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) (purple triangles), do not compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
-        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' total log abundance (y-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green triangles identify species with low overall abundance but strong competitive effects on neighbours: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). \\
-        (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red triangles show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect.} 
+        (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' total log abundance (y-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green triangles identifies a species with low overall abundance but strong competitive effects on neighbours: \textit{Gilberta tenuifolia} (GITE). \\
+        (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red triangles show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect. \textbf{Points capturing the effects of \textit{H. glabra} on neighbours are spread much further apart than for any other species, this is largely driven by it's high germination rate which magnifies interaction effects when those are scaled according to the population dynamics model as in the Supplementary Methods \ref{SI:popdyn}.}} 
     \end{figure}
 
 \clearpage
